--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 header {
     position: fixed;
     width: 100%;
-    height: 20vh;
+    height: 18%;
     top: 0;
     background-color: #333;
     color: #fff;
@@ -17,7 +17,6 @@ header {
     z-index: 1;
 }
 .wrapper{
-    margin-top: 20px;
     left:50%;
     top:50%;
     position: absolute;
@@ -80,8 +79,8 @@ header {
     animation-delay: 1950ms;
 }
 main{
-    margin-top: 20vh;
-    margin-bottom: 15vh;
+    margin-top: 10%;
+    margin-bottom: 8%;
     display: flex;
     flex-direction: column;
     font-family: Arial, sans-serif;
@@ -99,7 +98,7 @@ main{
   
 }
 .project, .skill {
-    width: 800px;
+    width: 80%;
     margin: 20px auto;
     padding: 20px;
     background-color: #dfdfdf;
@@ -267,4 +266,7 @@ footer{
 }
 footer > h2{
     color: #fff;
+}
+@media screen and {
+    
 }
