--- a/style.css
+++ b/style.css
@@ -112,10 +112,10 @@ main{
 }
 
 .myCard {
-    margin: 180px auto;
+    margin: 100px auto;
     background-color: transparent;
-    width: 190px;
-    height: 254px;
+    width: 350px;
+    height: 450px;
     perspective: 1000px;
   }
   
@@ -148,6 +148,7 @@ main{
     color: white;
     box-shadow: 0 0 0.3em rgba(255, 255, 255, 0.5);
     font-weight: 700;
+    font-size: 1.5em;
   }
   
   .frontSide,
@@ -255,7 +256,7 @@ a:hover {
 }
 footer{
     width: 100%;
-    height: 15vh;
+    height: 15%;
     background-color: #333;
     color: #fff;
     text-align: center;
@@ -267,6 +268,6 @@ footer{
 footer > h2{
     color: #fff;
 }
-@media screen and {
-    
+footer a {
+    font-size: 20px;
 }
