--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@ main{
     background-color: #dfdfdf;
     border-radius: 8px;
     box-shadow: 0 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
 }
 .project a::after {
     content: " \f35d";
@@ -153,7 +154,7 @@ main{
   
   .frontSide,
   .frontSide::before {
-    background: linear-gradient(43deg, rgb(65, 88, 208) 0%, rgb(200, 80, 192) 46%, rgb(255, 204, 112) 100%);
+    background: linear-gradient(43deg, rgb(65, 88, 208) 0%, rgb(80, 200, 96) 50%, rgb(216, 132, 255) 100%);
   }
   
   .backSide,
@@ -212,7 +213,7 @@ ul {
 }
 
 li {
-    margin-bottom: 8px;
+    margin-top: 50px;
 }
 
 a {
@@ -239,6 +240,7 @@ a:hover {
     filter: drop-shadow(0 0 5px rgb(71, 71, 71));
 }
 .html, .css, .java {
+    margin-top: 10px;
     margin-bottom: 20px;
     width: 100%;
     height: 15px;
