--- a/style.css
+++ b/style.css
@@ -258,7 +258,7 @@ a:hover {
 }
 footer{
     width: 100%;
-    height: 15%;
+    height: 18%;
     background-color: #333;
     color: #fff;
     text-align: center;
@@ -270,6 +270,6 @@ footer{
 footer > h2{
     color: #fff;
 }
-footer a {
-    font-size: 20px;
+.fa-square-github {
+    font-size: 40px;
 }
