--- a/style.css
+++ b/style.css
@@ -1,320 +1,341 @@
 body {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
 }
 header {
-    position: fixed;
-    width: 100%;
-    height: 18%;
-    top: 0;
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 1em 0;
-    z-index: 1;
+  position: fixed;
+  width: 100%;
+  height: 18%;
+  top: 0;
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 1em 0;
+  z-index: 1;
 }
-.wrapper{
-    left:50%;
-    top:50%;
-    position: absolute;
-    transform: translate(-50%, -50%);
-    text-align: center;
+.wrapper {
+  left: 50%;
+  top: 50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  text-align: center;
 }
-.wrapper span{
-    font-size: 1.5em;
-    font-weight: bold;
+.wrapper span {
+  font-size: 1.5em;
+  font-weight: bold;
+  color: #4b4b4b;
+  animation: lighting 2s alternate infinite ease;
+}
+@keyframes lighting {
+  0%,
+  85% {
     color: #4b4b4b;
-    animation: lighting 2s alternate infinite ease;
+    text-shadow: none;
+  }
+  100% {
+    color: #fff200;
+    text-shadow: 0 0 5px #fff200, 0 0 3px #ff9f1a;
+  }
 }
-@keyframes lighting{
-    0%,85%{
-        color: #4b4b4b;
-        text-shadow: none;
-    }
-    100%{
-        color:#fff200;
-        text-shadow: 0 0 5px #fff200, 0 0 3px #ff9f1a;
-    }
+.wrapper span:nth-child(1) {
+  animation-delay: 150ms;
 }
-.wrapper span:nth-child(1){
-    animation-delay: 150ms;
+.wrapper span:nth-child(2) {
+  animation-delay: 300ms;
 }
-.wrapper span:nth-child(2){
-    animation-delay: 300ms;
+.wrapper span:nth-child(3) {
+  animation-delay: 450ms;
 }
-.wrapper span:nth-child(3){
-    animation-delay: 450ms;
+.wrapper span:nth-child(4) {
+  animation-delay: 600ms;
 }
-.wrapper span:nth-child(4){
-    animation-delay: 600ms;
+.wrapper span:nth-child(5) {
+  animation-delay: 750ms;
 }
-.wrapper span:nth-child(5){
-    animation-delay: 750ms;
+.wrapper span:nth-child(6) {
+  animation-delay: 900ms;
 }
-.wrapper span:nth-child(6){
-    animation-delay: 900ms;
+.wrapper span:nth-child(7) {
+  animation-delay: 1050ms;
 }
-.wrapper span:nth-child(7){
-    animation-delay: 1050ms;
+.wrapper span:nth-child(8) {
+  animation-delay: 1200ms;
 }
-.wrapper span:nth-child(8){
-    animation-delay: 1200ms;
+.wrapper span:nth-child(9) {
+  animation-delay: 1350ms;
 }
-.wrapper span:nth-child(9){
-    animation-delay: 1350ms;
+.wrapper span:nth-child(10) {
+  animation-delay: 1500ms;
 }
-.wrapper span:nth-child(10){
-    animation-delay: 1500ms;
+.wrapper span:nth-child(11) {
+  animation-delay: 1650ms;
 }
-.wrapper span:nth-child(11){
-    animation-delay: 1650ms;
+.wrapper span:nth-child(12) {
+  animation-delay: 1800ms;
 }
-.wrapper span:nth-child(12){
-    animation-delay: 1800ms;
+.wrapper span:nth-child(13) {
+  animation-delay: 1950ms;
 }
-.wrapper span:nth-child(13){
-    animation-delay: 1950ms;
-}
-main{
-    margin-top: 10%;
-    margin-bottom: 8%;
-    display: flex;
-    flex-direction: column;
-    font-family: Arial, sans-serif;
-    width: 100%;
-    height: 100%;
-    background-image: repeating-conic-gradient(
+main {
+  margin-top: 10%;
+  margin-bottom: 8%;
+  display: flex;
+  flex-direction: column;
+  font-family: Arial, sans-serif;
+  width: 100%;
+  height: 100%;
+  background-image: repeating-conic-gradient(
     from 0deg,
     orangered,
     transparent 10deg,
     orange 10deg,
-    orangered 20deg);
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    background-color: orange;
-  
+    orangered 20deg
+  );
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-color: orange;
 }
-.project, .skill {
-    width: 80%;
-    margin: 20px auto;
-    padding: 20px;
-    background-color: #dfdfdf;
-    border-radius: 8px;
-    box-shadow: 0 0 0 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
+.project,
+.skill {
+  width: 80%;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #dfdfdf;
+  border-radius: 8px;
+  box-shadow: 0 0 0 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
 }
 .project a::after {
-    content: " \f35d";
-    font-family: "fontawesome";
-    color: blue;
+  content: " \f35d";
+  font-family: "fontawesome";
+  color: blue;
 }
 .myCard {
-    margin: 65px auto;
-    background-color: transparent;
-    width: 350px;
-    height: 450px;
-    perspective: 1000px;
+  margin: 65px auto;
+  background-color: transparent;
+  width: 350px;
+  height: 450px;
+  perspective: 1000px;
 }
-  
+
 .innerCard {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    transition: transform 0.8s;
-    transform-style: preserve-3d;
-    cursor: pointer;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+  cursor: pointer;
 }
 .myCard:hover .innerCard {
-    transform: rotateY(180deg);
+  transform: rotateY(180deg);
 }
-  
+
 .frontSide,
 .backSide {
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
-    border: 1px solid rgba(255, 255, 255, 0.8);
-    border-radius: 1rem;
-    color: white;
-    box-shadow: 0 0 0.3em rgba(255, 255, 255, 0.5);
-    font-weight: 700;
-    font-size: 1.5em;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  border: 1px solid rgba(255, 255, 255, 0.8);
+  border-radius: 1rem;
+  color: white;
+  box-shadow: 0 0 0.3em rgba(255, 255, 255, 0.5);
+  font-weight: 700;
+  font-size: 1.5em;
 }
 .frontSide,
 .frontSide::before {
-    background: linear-gradient(43deg, rgb(65, 88, 208) 0%, rgb(80, 200, 96) 50%, rgb(216, 132, 255) 100%);
+  background: linear-gradient(
+    43deg,
+    rgb(65, 88, 208) 0%,
+    rgb(80, 200, 96) 50%,
+    rgb(216, 132, 255) 100%
+  );
 }
-  
+
 .backSide,
 .backSide::before {
-    background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+  background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
 }
 .backSide {
-    background-image: url(./Bilder/ich.jpeg);
-    background-position: center;
-    background-size: cover;
-    transform: rotateY(180deg);
+  background-image: url(./Bilder/ich.jpeg);
+  background-position: center;
+  background-size: cover;
+  transform: rotateY(180deg);
 }
 .frontSide::before,
 .backSide::before {
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    content: '';
-    width: 110%;
-    height: 110%;
-    position: absolute;
-    z-index: -1;
-    border-radius: 1em;
-    filter: blur(10px);
-    animation: animate 5s linear infinite;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  content: "";
+  width: 110%;
+  height: 110%;
+  position: absolute;
+  z-index: -1;
+  border-radius: 1em;
+  filter: blur(10px);
+  animation: animate 5s linear infinite;
 }
-  
+
 @keyframes animate {
-    0% {
-      opacity: 0.3;
-    }
-  
-    80% {
-      opacity: 1;
-    }
-  
-    100% {
-      opacity: 0.3;
-    }
+  0% {
+    opacity: 0.3;
+  }
+
+  80% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0.3;
+  }
 }
-h2, h3 {
-    text-decoration: underline;
-    color: #333;
+h2,
+h3 {
+  text-decoration: underline;
+  color: #333;
 }
 p {
-    line-height: 1em;
+  line-height: 1em;
 }
 ul {
-    list-style: none;
-    padding: 0;
+  list-style: none;
+  padding: 0;
 }
 li {
-    margin-top: 50px;
+  margin-top: 50px;
 }
 a {
-    color: #007bff;
-    text-decoration: none;
+  color: #007bff;
+  text-decoration: none;
 }
 a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 .skill {
-    margin: 180px auto;
+  margin: 180px auto;
 }
 .radio-inputs {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    border-radius: 0.5rem;
-    background-color: rgb(155, 155, 155);
-    box-sizing: border-box;
-    box-shadow: 0 0 0px 1px rgba(0, 0, 0, 0.06);
-    padding: 0.25rem;
-    width: 100%;
-    font-size: 14px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  border-radius: 0.5rem;
+  background-color: rgb(155, 155, 155);
+  box-sizing: border-box;
+  box-shadow: 0 0 0px 1px rgba(0, 0, 0, 0.06);
+  padding: 0.25rem;
+  width: 100%;
+  font-size: 14px;
 }
-  
+
 .radio-inputs .radio {
-    flex: 1 1 auto;
-    text-align: center;
+  flex: 1 1 auto;
+  text-align: center;
 }
-  
+
 .radio-inputs .radio input {
-    display: none;
+  display: none;
 }
-  
+
 .radio-inputs .radio .name {
-    display: flex;
-    cursor: pointer;
-    align-items: center;
-    justify-content: center;
-    border-radius: 0.5rem;
-    border: none;
-    padding: .5rem 0;
-    transition: all .15s ease-in-out;
+  display: flex;
+  cursor: pointer;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0.5rem;
+  border: none;
+  padding: 0.5rem 0;
+  transition: all 0.15s ease-in-out;
 }
 .radio-inputs .radio input:checked + .name {
-    background-color: rgb(201, 201, 201);
-    font-weight: 600;
+  background-color: rgb(201, 201, 201);
+  font-weight: 600;
 }
-  
+
 input:checked ~ .html,
 input:checked ~ .css,
 input:checked ~ .java {
-      display: block;
-      
+  display: block;
 }
 .fa-html5 {
-    color: rgb(255, 68, 0);
-    filter:drop-shadow(0 0 5px rgb(71, 71, 71));
+  color: rgb(255, 68, 0);
+  filter: drop-shadow(0 0 5px rgb(71, 71, 71));
 }
 .fa-css3 {
-    color: rgb(84, 84, 253);
-    filter: drop-shadow(0 0 5px rgb(71, 71, 71));
+  color: rgb(84, 84, 253);
+  filter: drop-shadow(0 0 5px rgb(71, 71, 71));
 }
 .fa-js {
-    color: rgb(255, 238, 0);
-    filter: drop-shadow(0 0 5px rgb(71, 71, 71));
+  color: rgb(255, 238, 0);
+  filter: drop-shadow(0 0 5px rgb(71, 71, 71));
 }
-.html, .css, .java {
-    display: none;
-    margin-top: 10px;
-    margin-bottom: 20px;
-    width: 100%;
-    height: 15px;
-    border-radius: 10px;
-    animation-name: fadeInDown;
-    animation-duration: 1.5s;
-    animation-fill-mode: both;
+.html,
+.css,
+.java {
+  display: none;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  width: 100%;
+  height: 15px;
+  border-radius: 10px;
+  animation-name: fadeInDown;
+  animation-duration: 1.5s;
+  animation-fill-mode: both;
 }
 .html {
-    background: linear-gradient(to right, rgb(255, 68, 0)80%,rgb(253, 253, 253)85%);
+  background: linear-gradient(
+    to right,
+    rgb(255, 68, 0) 80%,
+    rgb(253, 253, 253) 85%
+  );
 }
 .css {
-    background: linear-gradient(to right, rgb(84, 84, 253)70%,rgb(253, 253, 253)75%);
+  background: linear-gradient(
+    to right,
+    rgb(84, 84, 253) 70%,
+    rgb(253, 253, 253) 75%
+  );
 }
 .java {
-    background: linear-gradient(to right, rgb(255, 238, 0)10%,rgb(253, 253, 253)15%);
+  background: linear-gradient(
+    to right,
+    rgb(255, 238, 0) 10%,
+    rgb(253, 253, 253) 15%
+  );
 }
 @keyframes fadeInDown {
-    0% {
+  0% {
     opacity: 0;
     transform: translate3d(0, -100%, 0);
-    }
-    100% {
+  }
+  100% {
     opacity: 1;
     transform: none;
-    }
-    } 
-footer{
-    width: 100%;
-    height: 18%;
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 1em 0;
-    position: fixed;
-    width: 100%;
-    bottom: 0;
+  }
 }
-footer > h2{
-    color: #fff;
+footer {
+  width: 100%;
+  height: 18%;
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 1em 0;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+}
+footer > h2 {
+  color: #fff;
 }
 .fa-square-github {
-    font-size: 40px;
+  font-size: 40px;
 }
